fixed scrollbug with z-index unset

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -96,6 +96,10 @@ a.mdl-button.mdl-button--raised.button-warning {
   }
 }
 
+.mdl-layout__content {
+  z-index: unset;
+}
+
 .mdl-layout__drawer .mdl-layout-title {
   font-size: 12px;
 }
